<resources>

    <string name="app_name">ChattingApp</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>

    <string name="label_SignUp">SignUp</string>
    <string name="label_SignIn">Login</string>

    <string name="btn_SignUp">SignUp</string>
    <string name="btn_SignIn">Login</string>
    <string name="btn_google">Google</string>
    <string name="label_message">Message</string>
    <string name="label_profile">Profile</string>

    <string name="btn_save">Save</string>

    <string name="type_message">Type Message</string>

</resources>