<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/Main_Activity_Background_Color"
    tools:context=".Activity.MainActivity">


    <TextView
        android:id="@+id/chattingApp_tv_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="20dp"
        android:text="ChattingApp"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/chat_animated_view"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/ic_baseline_chat">
    </ImageView>

    <TextView
        android:id="@+id/SignUp_tv_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/label_SignUp"
        android:textSize="25dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/entername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_person_add"
            android:drawablePadding="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/edit_textfields_shape"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:padding="12dp"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:textColor="@color/black"/>


        <EditText
            android:id="@+id/enteremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_baseline_email"
            android:drawablePadding="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:padding="12dp"
            android:hint="@string/enter_email"
            android:textColor="@color/black"
            android:background="@drawable/edit_textfields_shape" />


        <EditText
            android:id="@+id/enterpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:inputType="textPassword"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/ic_baseline_password"
            android:drawablePadding="15dp"
            android:layout_marginTop="5dp"
            android:padding="12dp"
            android:hint="@string/enter_password"
            android:textColor="@color/black"
            android:background="@drawable/edit_textfields_shape"/>


        <EditText
            android:id="@+id/enterconfirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/ic_baseline_password"
            android:drawablePadding="15dp"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:padding="12dp"
            android:hint="@string/enter_confirm_password"
            android:textColor="@color/black"
            android:background="@drawable/edit_textfields_shape"/>


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginEnd="2dp"
            android:textColor="@color/white"
            android:text="@string/btn_SignUp"
            android:textSize="20dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:backgroundTint="@color/Signup_btn_Color"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/btn_SignIn"
            android:backgroundTint="@color/Login_btn_Color"/>


</LinearLayout>