<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/Login_Activity_Background_Color"
    tools:context=".Activity.MainActivity">


    <TextView
        android:id="@+id/SignIn_tv_loginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="Sign In"
        android:textSize="35dp"
        android:layout_marginBottom="100dp"
        android:drawableLeft="@drawable/ic_baseline_login"
        android:drawablePadding="10dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/enteremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_baseline_user"
        android:drawablePadding="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:padding="12dp"
        android:hint="@string/enter_email"
        android:textColor="@color/black"
        android:background="@drawable/edit_textfields_shape" />


    <EditText
        android:id="@+id/enterpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_baseline_password"
        android:drawablePadding="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:padding="12dp"
        android:hint="@string/enter_password"
        android:textColor="@color/black"
        android:background="@drawable/edit_textfields_shape"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/btn_SignIn"
        android:layout_marginBottom="1dp"
        android:textSize="20dp"
        android:padding="10dp"
        android:textStyle="bold"
        android:backgroundTint="@color/Login_btn_Color"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="2dp"
        android:text="@string/btn_SignUp"
        android:textSize="20dp"
        android:padding="10dp"
        android:textStyle="bold"
        android:backgroundTint="@color/Signup_btn_Color"
        android:textColor="@color/white">
    </Button>

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/Google_btn_Color"
        android:padding="10dp"
        android:text="@string/btn_google"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

</LinearLayout>